--- a/.eslintrc
+++ b/.eslintrc
@@ -1,14 +1,12 @@
 {
   "root": true,
-  "ignorePatterns": [],
+
+  "ignorePatterns": ["jest.config.ts", "data/*"],
+
   "overrides": [
     {
-      "files": ["*.ts"],
-      "parser": "@typescript-eslint/parser",
-      "parserOptions": {
-        "project": ["tsconfig.json"],
-        "createDefaultProgram": true
-      },
+      "files": ["src/**/*.ts", "src/**/*.d.ts"],
+      "env": { "node": true },
       "plugins": ["@typescript-eslint"],
       "extends": [
         "eslint:recommended",
@@ -16,8 +14,26 @@
         "plugin:@typescript-eslint/recommended",
         "plugin:prettier/recommended"
       ],
+      "parser": "@typescript-eslint/parser",
+      "parserOptions": {
+        "ecmaVersion": "latest",
+        "sourceType": "module",
+        "project": ["tsconfig.json"]
+      }
+    },
+    {
+      "files": ["tests/*.test.ts"],
+      "env": { "jest": true, "node": true },
+      "plugins": ["@typescript-eslint", "jest"],
+      "extends": [
+        "eslint:recommended",
+        "plugin:@typescript-eslint/eslint-recommended",
+        "plugin:@typescript-eslint/recommended",
+        "plugin:prettier/recommended",
+        "plugin:jest/all"
+      ],
       "rules": {
-        "prettier/prettier": ["error", { "endOfLine": "auto" }]
+        "jest/no-hooks": ["error", { "allow": ["beforeAll", "afterAll"] }]
       }
     }
   ]
