--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "tiny-seeder",
-  "version": "2.0.9",
+  "version": "2.1.2",
   "description": "A tiny seeder to generate a simple SQL file to populate your database",
-  "main": "./lib/index.js",
+  "main": "./dist/index.js",
   "files": [
-    "lib",
+    "dist",
     "typings",
     "readme.md"
   ],
   "types": "./typings/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "prepare": "npm run build"
+    "prepare": "npm run build",
+    "test": "jest"
   },
   "keywords": [
     "seed",
@@ -29,16 +30,22 @@
     "tslib": "^2.3.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^6.0.0-alpha.7",
+    "@types/jest": "^27.4.0",
     "@types/node": "^16.11.9",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
-    "community-faker": "^5.5.5",
     "eslint": "^8.2.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-jest": "^26.1.1",
     "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^27.5.1",
     "prettier": "^2.4.1",
+    "ts-jest": "^27.1.3",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.2",
+    "uuid": "^8.3.2"
   }
 }
